2014-12-19  Moritz Bunkus  <moritz@bunkus.org>

        * KaxBlock::ReadInternalHead(): fixed a off-by-one buffer overflow
        if with EBML lacing and exactly one frame in the lace.

2013-09-17 mosu
New 1.4.1 version:
    - Added new elements/classes DiscardPadding, CodecDelay and
      SeekPreRoll
    - The licensing information has been cleared up/unified.
    - The Makefile now contain options for specifying the destination
      base directory during installation ("DESTDIR") and for
      specifying which library types to build ("link").
    - The libraries are built without the "-ansi" and
      "-fno-gnu-keywords" flags on Linux
    - Code cleanup

2013-03-19 mosu/robux4
New 1.4.0 version:
    * Note that this release is not binary compatible to 1.3.0 due to
      the dependancy on libEBML 1.3.0 which is not binary compatible
      to its predecessor.
    - Added new elements CueDuration, CueRelativePosition,
      ChapterStringUID, VideoAlphaMode and DefaultDecodedFieldDuration
    - Removed the Debian build files from our package.

2011-09-23 robux4/mosu
New 1.3.0 version:
    - initialize all data members
    - The KaxCodeVersion variable now resides in the library instead of being declared static in the header file.
    - make KaxChapterSegmentEditionUID an unsigned integer to match the KaxChapterEditionUID it's supposed to target
    - This release is not binary compatible to 1.2.x.

2011-06-26 robux4/mosu
New 1.2.0 version:
    - skip data from KaxBlockVirtual as it should not be used
    - use semantic generated from the specs so there is no more possible mismatch

2011-02-02 impulze
    * trunk/libmatroska/test/test9.cpp
    - also remove no longer needed tests for old/outdated/previous tag system

2011-01-30 robux4/mosu
New 1.1.0 version:
    - give access to the SetParent to KaxSimpleBlock as well
    - change the placement of a MATROSKA_DLL_API so that it actually works
    - remove all references to the old/outdated/previous tag system